# PyCamp_Bot

./: .buildinfo  .env.dist  .gitignore  .pylintrc  .readthedocs.yaml  Dockerfile  Guía ultra amigable para usar el bot.md  README.md  bardo.py  bot.py  bot_father_commands.md  bot_temp.py  comandos_bot.html  cualquiera.json  data.json  data_example.json  db_schemma.py  db_to_json.py  genindex.html  imput_projects.py  index.html  instalacion_entorno.html  load_project.py  manage_pycamp.py  merge.py  models.py  objects.inv  original_bot.py  own.py  pycamp_bot.html  pyproject.toml  raffle.py  requirements.txt  search.html  searchindex.js  setup.py  to-do.txt  todo.md  token_secure.py  utils.py  (+3 more)
.doctrees/: comandos_bot.doctree  environment.pickle  index.doctree  instalacion_entorno.doctree  pycamp_bot.doctree
.doctrees/pycamp_bot/: commands.doctree  db_schemma.doctree  models.doctree  scheduler.doctree
.github/workflows/: docs.yml  pythonapp.yml
_sources/: comandos_bot.rst.txt  pycamp_bot.rst.txt
_sources/pycamp_bot/: commands.rst.txt  scheduler.rst.txt
_static/: documentation_options.js
docs/: comandos_bot.rst  conf.py  index.rst  instalacion_entorno.rst
docs/source/: comandos_bot.rst  conf.py  index.rst  instalacion_entorno.rst  pycamp_bot.rst
img/: algo
migrations/: 001_wizards_schedule.py  migrate_to_repository_and_group_urls.py  migrate_to_wizards_scheduling.py
pycamp_bot/: commands.html  db_schemma.html  models.html  scheduler.html
test/: __init__.py  conftest.py  test_pycamp_model.py  test_pycampista.py  test_start.py  test_wizard.py
tests/: test_no_test.py
(+67 files in other folders)
