[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyCamp_Bot"
version = "3.0"
dependencies = [
  "munch==4.0.0",
  "python-telegram-bot==21.3",
  "peewee==3.17.5",
  "sentry-sdk==2.6.0",
]
requires-python = "==3.10.*"
authors = [
  {name = "Pyar", email = "pyar@pyar.com"},
]
description = "Bot de telegram para organizar pycamp"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "flake8==7.1.0",
  "freezegun==1.5.1",
  "pytest==8.2.2",
]
